--- a/index.html
+++ b/index.html
@@ -477,7 +477,6 @@
                             <span class="detail-badge">Kahoot interactivo</span>
                             <span class="detail-badge">Competencia amigable</span>
                             <span class="detail-badge">1 hora</span>
-                            <span class="detail-badge">Acompañamiento Psicóloga ARL</span>
                         </div>
                         <div class="responsible-badge">👤 Juan Camilo</div>
                         <div class="city-badge">Virtual</div>
@@ -702,7 +701,7 @@
                     </div>
                     
                     <div class="activity-card" data-city="Todas las Ciudades y Virtual" data-responsible="CoCoLab">
-                        <div class="activity-date">29 de Septiembre</div>
+                        <div class="activity-date">29 y 30 de Septiembre</div>
                         <div class="activity-title">📊 Pulso Mes de la Convivencia</div>
                         <div class="activity-objective">Medir el impacto de las actividades y identificar áreas de mejora</div>
                         <div class="activity-details">
